--- a/src/templates/popup.html
+++ b/src/templates/popup.html
@@ -2,15 +2,23 @@
 <html>
   <head>
     <style>
+      body {
+        margin: 0;
+      }
       button {
-        height: 30px;
-        width: 30px;
+        margin: 0;
+        font-size: 14px;
+        padding: 25px;
+        width: 100%;
+        border: none;
         outline: none;
+        background-color: #333;
+        color: white;
       }
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="changeColor">Turn On</button>
     <script src="../js/popup.js"></script>
   </body>
 </html>
